openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  labels:
    app: backend
    component: api
spec:
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
